php added , validate-js edited so contact form work correctly, removed ' required ' validations, a " sending message " msg was added and css was added to make it visible when clicked.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1686,6 +1686,10 @@ section {
   background: #8dbad2;
 }
 
+.button-area span {
+  display: none;
+}
+
 @-webkit-keyframes animate-loading {
   0% {
     transform: rotate(0deg);
